--- a/Monochrome/scss/index.scss
+++ b/Monochrome/scss/index.scss
@@ -20,6 +20,7 @@ $fa-font-path: '/fonts';
 @import './homepage/index';
 @import './category/index';
 @import './menspage/index';
+@import './productpage/index';
 
 body {
   font-family: 'PlayfairDisplay';
