--- a/Monochrome/scss/menspage/_menspage.scss
+++ b/Monochrome/scss/menspage/_menspage.scss
@@ -27,6 +27,15 @@
       a {
         padding: 12px 50px;
         border: 1px solid #ccc;
+        font-size: 16px;
+        color: $brand-main;
+        transition: color 0.2s linear, background-color 0.2s linear;
+
+        &:hover {
+          text-decoration: none;
+          background-color: $brand-main;
+          color: $white;
+        }
       }
     }
   }
