--- a/Monochrome/scss/shared/controls/_buttons.scss
+++ b/Monochrome/scss/shared/controls/_buttons.scss
@@ -1,14 +1,17 @@
 .btn {
-  margin-top: 35px;
+  margin-top: 50px;
   margin-bottom: 40px;
 }
 
 .catalog-preview-cta {
   @include media-breakpoint-up('md') {
-    text-decoration: none;
+    font-size: 22px;
+    transition: color 0.1s linear, background-color 0.1s linear;
 
     &:hover {
       text-decoration: none;
+      color: $white;
+      background-color: $brand-main;
     }
   }
   text-decoration: none;
